copied base from minion

--- a/index.html
+++ b/index.html
@@ -13,24 +13,17 @@
 
 <body>
   <header class="logo">
-    <h1>Talk Banana</h1>
+    <h1>Talk Yoda</h1>
 
 
   </header>
 
   <section class="hero">
 
-    <p>Are you a fan of Star wars universe? </p>
-
-      <p>Then you might be familiar with way Yoda speaks.</p>
-
-    <p> Use the translator to
-      convert your text from English to  Yoda language.</p>
-
     <section class="box">
       <div id="input">
-      <p class="ins">GIVE YOUR INPUT HERE👇</p>
-      <textarea placeholder="Enter text" id="txt-input" cols="30" rows="10"></textarea>
+        <p class="ins">GIVE YOUR INPUT HERE👇</p>
+        <textarea placeholder="Enter text" id="txt-input" cols="30" rows="10"></textarea>
 
       </div>
 
@@ -40,9 +33,17 @@
       </div>
     </section>
 
-     <button id="btn-translate">Translate</button>
+    <button id="btn-translate">Translate</button>
 
-      
+    <div id="para">
+      <p>Are you a fan of Star wars universe?</p>
+      <p>Then you might be familiar with way Yoda speaks.</p>
+      <p>Use this translator to convert your text
+        from English to Yoda language.</p>
+    </div>
+
+
+
 
 
   </section>
