--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
   <footer class="end">
     <h3>
-      Made by <a href="https://github.com/utsavkumar-280" target="_blank">Utsav kumar</a>
+      Made by <a href="https://utsav-kumar.netlify.app/" target="_blank">Utsav kumar</a>
     </h3>
   </footer>
 
