--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <p>Are you a fan of Star wars universe?</p>
       <p>Then you might be familiar with way Yoda speaks.</p>
       <p>Use this translator to convert your text
-        from English to Yoda language.</p>
+        from English to Yodish.</p>
     </div>
 
 
